objects/Community_Badge_Social_Sharing__mdt.object
<CustomObject>
    <description>This custom metadata stores configuration for certification badges which can be shared on social media like Linkedin, Twitter.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Contains the description of certification badge.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <description>Contains the redirect url for community badge.</description>
        <label>Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Contains the title of certification badge.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Text__c</fullName>
        <description>Contains the default twitter text.</description>
        <label>Twitter Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <description>Unique name of certification program.</description>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Community Badge Social Sharing</label>
    <pluralLabel>Community Badge Social Sharings</pluralLabel>
</CustomObject>